predev with 650 speed